--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     
     <div id="main">
         <div class="back">
-            <img src="./img/IMG_7564.JPG" alt="">
-            <img src="./img/IMG_7565.JPG" alt="">
-            <img src="./img/IMG_7566.JPG" alt="">
-            <img src="./img/IMG_7567.JPG" alt="">
-            <img src="./img/IMG_7568.JPG" alt="">
+            <img src="./img/IMG_7564.webp" alt="">
+            <img src="./img/IMG_7565.webp" alt="">
+            <img src="./img/IMG_7566.webp" alt="">
+            <img src="./img/IMG_7567.webp" alt="">
+            <img src="./img/IMG_7568.webp" alt="">
         </div>
         <div class="top">
             <div class="content">
                 <div class="nav">
                     <div class="nav-left">
-                    <img src="./img/raybanlogo.png" alt="">
+                    <img src="./img/raybanlogo.webp" alt="">
                     <a href="#">products</a>
                     <a href="#">about</a>
                     </div>
